# Pyatnashki-OpenCV

./: CMakeLists.txt  README.md
src/: main.cpp  pytnashki.cpp  pytnashki.h
